# seshat-rest

./: .gitignore  API.md  Cargo.toml  Makefile  README.md  property_name.h  server.py  urlparse.cpp
cgi-bin/: DUMMY
libs/: download.sh
src/: browse_api.rs  main.cpp  main.rs  normalization_api.rs  paths.h  properties.cpp  properties.h  properties_api.rs  segmentation_api.rs  unicode.cpp  unicode.h  versions.rs
