[package]
name = "seshat-rest"
version = "0.0.1"
authors = ["Yujeonja <hardboiled65@gmail.com>"]
description = "Seshat REST API Server."
license = "MIT"
readme = "README.md"
repository = "https://github.com/hardboiled65/seshat-rest"
keywords = ["unicode"]
edition = "2018"

[dependencies]
seshat-unicode = "0.0.15"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
