[package]
name = "seshat-rest"
version = "0.0.1"
authors = ["Aspen Schneider <rendezvous71@outlook.com>"]
description = "Seshat REST API server"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aspschn/seshat-rest"
keywords = ["unicode"]
edition = "2018"

[dependencies]
seshat-unicode = "0.3.1"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
